--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ language: c
 before_install:
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo apt-get update -q
-    - sudo apt-get install gcc-8 g++-8 gfortran-8 -y
+    - sudo apt-get install gcc-8 gfortran-8 -y
     - export CC=gcc-8
-    - export CXX=g++-8
     - export FC=gfortran-8
     - ${FC} --version
 
